spade-tests/src/snapshots/spade_tests__typeinference__trunc_requires_number.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}

fn test(a: A) -> int<8> {
    trunc(a)
}


error: Truncating to a larger value
  ┌─ testinput:4:11
  │
4 │     trunc(a)
  │     ------^-
  │     │     │
  │     │     This value is 0 bits
  │     The value is truncated to 8 bits here
  │
  = note: Truncation can only remove bits
